cluster/platform/storage/minio/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
spec:
  serviceName: minio-headless
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args:
        - server
        - http://minio-0.minio-headless.minio.svc.cluster.local/data
        - http://minio-1.minio-headless.minio.svc.cluster.local/data
        - http://minio-2.minio-headless.minio.svc.cluster.local/data
        - http://minio-3.minio-headless.minio.svc.cluster.local/data
        - --console-address
        - ":9001"
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn-single-replica
      resources:
        requests:
          storage: 5Gi
