cluster/platform/storage/minio/frontend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-frontend-loadbalancer
  namespace: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001  # Maps to MinIO Console
  type: ClusterIP
